[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unyts"
version = "0.2.1"
authors = [
  { name="Martin Carlos Araya", email="martinaraya@gmail.com" },
]
description = "a unit converter based on graph network and classes to operate with units."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
]
[project.urls]
"Homepage" = "https://github.com/ayaranitram/unyts"
"Bug Tracker" = "https://github.com/ayaranitram/unyts/issues"