[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "unyts"
version = "0.9.0"
authors = [
  { name="Martin Carlos Araya", email="martinaraya@gmail.com" },
]
description = "an unit converter based on graph network and classes to operate with units."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'stringthings',
    'cloudpickle'
    ]
[project.urls]
"Homepage" = "https://github.com/ayaranitram/unyts"
"Bug Tracker" = "https://github.com/ayaranitram/unyts/issues"
